--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -35,6 +35,7 @@
                     The projections illustrate how the region will accommodate growth if local jurisdictions adopt a set of policies consistent with the vision of Plan Bay Area. We make reasonable assumptions about the Bay Area’s share of national economic
                     growth informed by an understanding of the region’s changing demographic characteristics. The distribution of growth within the region among counties, cities and PDAs is built around expected local policies and infrastructure investment
                     as well as historic economic behavior.</p>
+                <p>For more details, download the report here: <a class="mouseover-red" href="http://mtcmedia.s3.amazonaws.com/files/Projections_2040-ABAG-MTC-web.pdf" target="_blank">Projections 2040 MTC/ABAG Report</a></p>
             </div>
             <div class="col-lg-5 mx-auto text-right">
                 <div class="item-1">
@@ -101,11 +102,10 @@
                         <thead>
                             <tr text-align="right">
                                 <td rowspan="1">
-                                    &nbsp;
-                                    &nbsp;
+                                    &nbsp; &nbsp;
                                 </td>
                                 <td colspan="2">
-                                   <strong>Public Data Estimates</strong>
+                                    <strong>Public Data Estimates</strong>
                                 </td>
                                 <td colspan="7">
                                     <strong>Plan Bay Area Model Estimates</strong>
@@ -712,14 +712,14 @@
         <div class="row">
             <div class="col-lg-12 mx-auto">
                 <p>You can download the projections data for free from our Open Data site. The following datasets are available for downloads:</p>
-                <!-- <p> <a href="https://open-data-demo.mtc.ca.gov/Agency/Draft-Projections-2017-by-Subregional-Study-Areas/bijg-2bez" target="_blank" class="btn btn-data btn-lg">Projections 2040 by Subregional Study Area</a>
-                </p> -->
+
                 <p>
-                    <a href="https://mtc.data.socrata.com/api/views/grqz-amra/files/bf2d7a33-b68e-473d-800f-956d08207b77?download=true&filename=formated_tables_juris.xlsx" target="_blank" class="btn btn-data btn-lg">Projections 2040 by Jurisdiction</a>
+                    <a href="https://mtc.data.socrata.com/api/views/grqz-amra/files/bf2d7a33-b68e-473d-800f-956d08207b77?download=true&filename=formated_tables_juris.xlsx" target="_blank" class="btn btn-data btn-lg">Projections 2040 by Jurisdiction (Curated)</a>
                 </p>
-                <!-- <p>
-                                <a href="https://open-data-demo.mtc.ca.gov/Agency/Draft-Projections-2017-by-Priority-Development-Are/wbrw-wuir" target="_blank" class="btn btn-default btn-lg">Projections 2040 by Priority Development Areas</a>
-                            </p> -->
+                <p>
+                    <a href="https://data.bayareametro.gov/Demography/Projections-2040-by-Jurisdiction/grqz-amra" target="_blank" class="btn btn-data btn-lg">Projections 2040 by Jurisdiction (Long Format)</a>
+                </p>
+
             </div>
         </div>
     </div>
